# mapache

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  test.yml  test_all.yml  test_integration.yml  test_lib.yml
src/: archiver.rs  backup.rs  cli.rs  filesystem.rs  lib.rs  main.rs  restorer.rs  testing.rs  utils.rs
src/archiver/: chunker.rs  committer.rs  file_saver.rs  mod.rs  processor.rs  storage.rs  tree_serializer.rs
src/backend/: backend.rs  dry.rs  localfs.rs  mod.rs  sftp.rs
src/backend/sftp/: mod.rs  sftp_pool.rs
src/cmd/: commit.rs  init.rs  log.rs  mod.rs  restore.rs
src/commands/: cat.rs  cmd_amend.rs  cmd_cat.rs  cmd_clean.rs  cmd_diff.rs  cmd_forget.rs  cmd_gc.rs  cmd_init.rs  cmd_log.rs  cmd_ls.rs  cmd_mount.rs  cmd_restore.rs  cmd_snapshot.rs  cmd_verify.rs  commit.rs  init.rs  log.rs  mod.rs  restore.rs  snapshot.rs
src/filesystem/: directory_node.rs  metadata.rs  mod.rs  tree.rs
src/fuse/: cache.rs  fs.rs  mod.rs  stash.rs
src/global/: defaults.rs  mod.rs  vars.rs
src/mapache/: mod.rs
src/repository/: assembly.rs  backend.rs  committer.rs  config.rs  gc.rs  index.rs  keys.rs  manifest.rs  meta.rs  mod.rs  pack_saver.rs  packer.rs  repo.rs  repository.rs  repository_v1.rs  snapshot.rs  storage.rs  streamers.rs  tree.rs  verify.rs
src/restorer/: mod.rs  node_restorer.rs
src/storage_backend/: backend.rs  dry.rs  localfs.rs  mod.rs  sftp.rs  url.rs
src/ui/: cli.rs  commit.rs  mod.rs  restore_progress.rs  snapshot_progress.rs  table.rs
src/utils/: hashing.rs  indexset.rs  json.rs  mod.rs  url.rs
testdata/: backup_data.tar.xz  tree0.json
tests/: test_cmd_init.rs  tests.rs
tests/integration_tests/: mod.rs  test_cmd_amend.rs  test_cmd_clean.rs  test_cmd_gc.rs  test_cmd_init.rs  test_cmd_restore.rs  test_cmd_snapshot.rs
