[package]
name = "backup"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
fastcdc = "3.2.1"
rand = "0.9.1"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
threadpool = "1.8.1"
zstd = "0.13.3"
