[package]
name = "backup"
version = "0.1.0"
edition = "2024"


[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
crossbeam-channel = "0.5.15"
dialoguer = "0.11.0"
fastcdc = "3.2.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
libc = "0.2.172"
num_cpus = "1.16.0"
rayon = "1.10.0"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
tempfile = "3.20.0"
zstd = "0.13.3"
