[package]
name = "backup"
version = "0.1.0"
edition = "2024"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"


[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive", "wrap_help"] }
colored = "3.0.0"
crossbeam-channel = "0.5.15"
dialoguer = "0.11.0"
fastcdc = "3.2.1"
filetime = "0.2.25"
indicatif = { version = "0.17.11", features = ["rayon"] }
num_cpus = "1.17.0"
rayon = "1.10.0"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
tempfile = "3.20.0"
zstd = "0.13.3"
